--- a/index.html
+++ b/index.html
@@ -603,6 +603,20 @@ footer {
     font-size: 0.85rem;
     color: #cccccc;
 }
+
+.add-to-cart-btn {
+    background-color: var(--primary-color);
+    color: white;
+    border: none;
+    padding: 0.9rem 1rem;
+    border-radius: 8px;
+    margin-top: 1.5rem;
+    cursor: pointer;
+    width: 100%;
+    font-weight: bold;
+    min-height: 44px;
+}
+
     </style>
 </head>
 <body>
