--- a/index.html
+++ b/index.html
@@ -264,6 +264,7 @@ main {
     cursor: pointer;
     font-size: 1.3rem;
     position: relative;
+    right: 20px;
     width: 44px;
     height: 44px;
     display: flex;
