--- a/index.html
+++ b/index.html
@@ -798,7 +798,7 @@ createApp({
 
         // Load configuration from URL
         const loadConfigFromUrl = async () => {
-        https://raw.githubusercontent.com/IsmaelLima21/Shop/main/data/Catalog_Data.json
+        const remoteJsonUrl = 'https://raw.githubusercontent.com/IsmaelLima21/Shop/main/data/Catalog_Data.json';
 
 
             try {
