--- a/index.html
+++ b/index.html
@@ -694,7 +694,7 @@ footer {
                             <!-- Customer Details and Payment View -->
                             <div v-if="cartView === 'details'" class="cart-details-form">
 
-			    <button @click="clearCustomerInfo">Borrar Datos</button>	
+			    <button @click="clearCustomerInfo" class="back-button">Borrar Datos</button>	
 
                                 <button @click="showCartItems" class="back-button">Volver al Pedido</button>
 
