--- a/index.html
+++ b/index.html
@@ -637,6 +637,11 @@ footer {
     	background: white;
 	}
 
+	.fa-solid, .fas {
+    	font-weight: 900;
+    	color: #ffffff;
+	}
+
     </style>
 </head>
 <body>
