--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
+<!-- Font Awesome CSS (v6) -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-...tu-hash..." crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+
     <title>Menú de Alimentos</title>
     <script type="importmap">
         {
