--- a/index.html
+++ b/index.html
@@ -1036,6 +1036,13 @@ createApp({
 
             window.open(`https://wa.me/${phoneNumber}?text=${encodedMessage}`, '_blank');
         };
+	
+	  // Clear the cart after placing the order
+              cart.value = [];
+              saveCart();
+              toggleCart(); // Close the cart modal
+              };
+
 
         const showCustomerDetails = () => {
             cartView.value = 'details';
