--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 :root {
     --primary-color: #FF6B35;
-    --secondary-color: #F7C59F;
+    --secondary-color: #dedede;
     --dark-color: #1C1C1E;
     --light-color: #F2F2F7;
     --card-background: #FFFFFF;
@@ -68,12 +68,13 @@ header {
 }
 
 header h1 {
-    font-size: 1.3rem;
+    font-size: 1.6rem;
     max-width: 60%;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    font-weight: 600;
+    font-weight: 800;
+    margin-left: -40;
 }
 
 .logo-container {
@@ -361,6 +362,7 @@ main {
 .cart-header h2 {
     font-size: 1.3rem;
     font-weight: 700;
+    margin-left: 12px;
 }
 
 .close-button {
