--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@ main {
 .cart-navigation-button {
     display: block;
     width: 100%;
-    background-color: var(--success-color);
+    background-color: #007aff;
     color: white;
     border: none;
     padding: 1rem;
